--- a/vehicles.css
+++ b/vehicles.css
@@ -68,6 +68,9 @@
 #p_description{
     margin: 10px;
 }
+#card h5{
+font-size: 1rem;
+}
 @media screen and (max-width: 60em){
 #vehicles{
     display: grid;
